--- a/DailyMood/app/build.gradle
+++ b/DailyMood/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'jp.wasabeef:glide-transformations:3.3.0'
 
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
